--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="form">
-	<%= form_tag guess_url(num: "#{count}"), remote: true do %>
+	<%= form_tag guess_url, remote: true do %>
 		<%= label_tag :guess, "Guess again:" %>
 		<%= text_field_tag :guess %>
 		<%= submit_tag "Enter" %>
