--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 Guess The Word
+<div class="notice">
+	<%= flash[:notice] %>
+</div>
 
 <%= form_tag play_url do %>
 	<%= label_tag :guess, "Have a guess:" %>
